[project]
name = "rate-limiter"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "bcrypt==4.0.1",
    "fastapi[standard]>=0.135.3",
    "passlib>=1.7.4",
    "python-dotenv>=1.2.2",
    "redis>=7.4.0",
    "sqlmodel>=0.0.38",
    "structlog>=25.5.0",
]
